c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/unclosed_nested_initializer.c
int main(void) {
    int arr[2][2] = {{ 1, 2}, {3, 4};
    return arr[0][0];
}